@@ -14,6 +14,7 @@ NEWS
   * [mod_cgi] issue trace and exit if execve() fails (closes #2302)
   * [configparser] don't continue after parse error (fixes #2717)
   * [core] never evaluate else branches until the previous branches are ready (fixes #2598)
+  * [core] fix conditional cache handling
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
